+- stable